<resources>
    <string name="app_name">Gong4-android</string>
    <!-- 로그인 text -->
    <string name="login_fragment_email">이메일 주소</string>
    <string name="login_fragment_password">비밀번호</string>
    <string name="login_fragment_password_hint">영문, 숫자, 특수문자를 사용한 8~16글자</string>
    <string name="login_title">로그인</string>
    <string name="login_fragment_info1">아직 회원이 아니신가요?</string>
    <string name="login_fragment_info2">비밀번호를 잃어버리셨나요?</string>
    <string name="login_fragment_find_password">비밀번호 찾기</string>
    <string name="login_fragment_wrong_answer">잘못된 형식의 %s입니다.</string>

    <!-- 회원가입 text -->
    <string name="signup_title">회원가입</string>
    <string name="signup_email">이메일 주소</string>
    <string name="signup_password">비밀번호</string>
    <string name="signup_password_hint">영문, 숫자, 특수문자를 사용한 8~16글자</string>
    <string name="signup_password_check">비밀번호 확인</string>
    <string name="signup_password_check_hint">위와 동일한 비밀번호 입력</string>
    <string name="signup_nickname">닉네임</string>
    <string name="signup_nickname_hint">최소 1자, 최대 10자 이내로 입력</string>
    <string name="signup_agree1">이용약관 동의 (필수)</string>
    <string name="signup_agree2">개인정보 수집 및 이용 동의 (필수)</string>
    <string name="signup_agree3">이벤트 정보 수신 동의 (선택)</string>
    <string name="signup_show_terms"><u>약관 보기</u></string>
    <string name="signup_wrong_text">잘못된 형식의 %s입니다.</string>
    <string name="signup_wrong_password">비밀번호가 일치하지 않습니다.</string>
    <string name="email_certify_msg">입력하신 이메일 주소</string>
    <string name="hint_code">코드를 입력하세요 (6자리)</string>
    <string name="wrong_code">잘못된 인증 코드입니다.</string>
    <string name="error_code"><u>코드를 받지 못하셨나요?</u></string>
    <string name="email_next">다음</string>
    <string name="signup_success">회원가입이 완료되었습니다.</string>
    <string name="send_code">인증 코드를 전송중입니다.</string>
    <string name="certify_success">이메일 인증이 완료되었습니다.</string>
    <string name="success_msg">공사와 함께 원하는 목표를 달성하세요.</string>
    <string name="start">시작하기</string>

    <!-- 회원가입 text -->
    <string name="menu">홈</string>

    <!-- 비밀번호 찾기 text -->
    <string name="findpassword_fragment_info">회원가입 시 등록한 이메일을 입력하세요.</string>
    <string name="findpassword_waiting_msg1">이메일 전송중입니다.</string>
    <string name="findpassword_waiting_msg2">임시비밀번호가 메일함으로 전송되었습니다.</string><!-- 추후 변경 예정 -->

    <!-- 메인화면 text -->
    <string name="main_search_hint">궁금하신게 있으신가요?</string>
    <string name="main_title">이런 방은 어떠세요?</string>
    <string name="main_filter_title">스터디룸 필터</string>
    <string name="main_filter_isCam">카메라 여부</string>
    <string name="main_filter_isCam_all">모두보기</string>
    <string name="main_filter_isCam_true">캠 켜기</string>
    <string name="main_filter_isCam_false">캠 끄기</string>
    <string name="main_filter_category">카테고리 (복수선택 가능)</string>
    <string name="main_filter_category02">카테고리</string>
    <string name="main_filter_category03">카테고리 설정</string>
    <string name="main_filter_period">기간 (선택)</string>
    <string name="main_filter_period_new">최신순</string>
    <string name="main_filter_period_old">마감순</string>
    <string name="main_filter_period_info">오늘을 기준으로 마감일이 가까운 스터디가 노출됩니다.</string>
    <string name="main_enter_code_text">입장코드</string>
    <string name="main_enter_code_hint">A123-8123-C123</string>
    <string name="main_enter_button_text">입장하기</string>
    <string name="main_join_button_text">가입하기</string>
    <string name="main_join_success">가입이 완료되었습니다.</string>
    <string name="main_save_success">저장되었습니다</string>
    <string name="main_study_info_isCam_true">카메라가 켜져있어요.</string>
    <string name="main_study_info_isCam_false">카메라가 꺼져있어요.</string>
    <string name="main_study_info_pepole_cnt">%d명</string>
    <string name="main_study_info_pepole_cnt_msg">입장 제한까지 %d명 남았어요.</string>
    <string name="main_study_info_pepole_cnt_err_msg">최대 인원으로 입장이 불가능 합니다.</string>
    <string name="main_study_info_cnt">인원</string>

    <!--스터디 그룹 생성-->
    <string name="main_study_make_title">스터디그룹 생성하기</string>
    <string name="main_study_make_room_title">방 제목</string>
    <string name="main_study_make_camera_title">카메라</string>
    <string name="main_study_make_chat_title">채팅</string>
    <string name="main_study_make_chat_true">채팅 허용</string>
    <string name="main_study_make_chat_false">채팅 비허용</string>
    <string name="main_study_make_cnt_title">제한 인원</string>
    <string name="main_study_make_open_title">공개여부</string>
    <string name="main_study_make_open_true">공개</string>
    <string name="main_study_make_open_false">비공개</string>
    <string name="main_study_make_category_title">카테고리 선택(복수 선택 가능)</string>
    <string name="main_study_make_penel_title">벌점</string>
    <string name="main_study_make_penel_true">있음</string>
    <string name="main_study_make_penel_false">없음</string>
    <string name="main_study_make_penel_opt">최대 10점까지 가능합니다.</string>
    <string name="main_study_make_study_title">스터디 재진입</string>
    <string name="main_study_make_study_true">허용</string>
    <string name="main_study_make_study_false">불가</string>
    <string name="main_study_make_study_opt">최대 7번까지 가능합니다.</string>
    <string name="main_study_make_time_title">스터디 목표 시간</string>
    <string name="main_study_make_time_opt">24시간 이내 1시간 단위로 가능합니다.</string>
    <string name="main_study_make_create_btn">생성하기</string>
    <string name="main_study_make_complete_title">스터디그룹이 생성되었어요!</string>
    <string name="main_study_make_move_title">대기실로 이동하기</string>
    <string name="main_study_make_study_image">배경 이미지</string>
    <string name="main_study_make_study_image_true">사용안함</string>
    <string name="main_study_make_study_image_false">사용함</string>
    <string name="main_study_make_study_image_select">이미지 올리기</string>
    <string name="main_study_make_study_period">스터디 기간</string>

    <!-- 스터디 그룹 text -->
    <string name="my_study_title">가입한 스터디그룹 내역</string>
    <string name="study_info">스터디 정보</string>
    <string name="study_name">스터디 명: </string>
    <string name="study_term">기간: </string>
    <string name="study_cam">캠 여부: </string>
    <string name="study_penalty">벌점: 최대 10점 이상 강퇴</string>
    <string name="study_min_time">최소 시간: </string>
    <string name="study_category">카테고리</string>
    <string name="study_qna">Q<![CDATA[&]]>A</string>
    <string name="study_qna_comment">댓글을 입력해주세요.</string>
    <string name="study_qna_title">질문 제목</string>
    <string name="study_qna_content">질문 내용</string>
    <string name="study_qna_register">질문하기</string>
    <string name="study_qna_register_complete">질문이 등록되었습니다</string>
    <string name="study_qna_delete_title">탈퇴하기</string>
    <string name="study_qna_delete_dialog_title">정말 그룹을 탈퇴하시겠습니까?</string>
    <string name="study_qna_delete_dialog_content">확인 버튼을 클릭시 그룹을 탈퇴합니다</string>
    <string name="study_qna_delete_dialog_complete_msg">탈퇴가 완료되었습니다</string>

    <!-- qna text -->
    <string name="qna_title">그룹 내 질문 모아보기</string>
    <string name="qna_category">질문</string>

    <!-- 공통 text -->
    <string name="save">저장</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="quit">나가기</string>
    <string name="setting">환경설정</string>
    <string name="server_error_msg">서버와의 통신이 원활하지 않습니다.</string>
    <string name="password_alias">******</string>

    <string name="comment_save_complete">댓글이 등록되었습니다</string>

    <string name="comment_remove_dialog_title">정말 삭제하시겠어요?</string>
    <string name="comment_remove_dialog_content">확인 버튼을 클릭 시 답변이 삭제됩니다</string>
    <string name="comment_remove_complete">삭제가 완료되었습니다</string>

    <string name="comment_update_dialog_title">댓글을 수정하시겠습니까?</string>
    <string name="comment_update_dialog_content">수정할 댓글을 입력해 주세요</string>
    <string name="comment_update_complete">수정이 완료되었습니다</string>

    <string name="mypage_study_status">스터디 중</string>
    <string name="mypage_study_level">Lv.%d</string>
    <string name="mypage_study_percentage">상위 %d%%</string>
    <string name="mypage_study_time">%sh %sm</string>
    <string name="mypage_study_rank_item">%d위: %s</string>
    <string name="mypage_qna_title">내 질문 모아보기</string>

    <string name="setting_image_update">이미지 편집</string>
    <string name="setting_current_nickname">현재 닉네임</string>
    <string name="setting_current_password">비밀번호 변경</string>
    <string name="setting_password_change">비밀번호 변경 확인</string>
    <string name="setting_nickname_confirm_msg">이미 사용되고 있는 닉네임입니다.</string>
    <string name="setting_confirm_msg">수정이 완료되었습니다.</string>

</resources>